--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -147,7 +147,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
+    background: url(../img/tnotm_work.jpg) no-repeat bottom center scroll;
     background-color: #2c3e50;
     -webkit-background-size: cover;
     -moz-background-size: cover;
